<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="412dp"
            android:layout_height="123dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sensorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="104dp"
                android:layout_marginLeft="104dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="104dp"
                android:layout_marginRight="104dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/sensor_title"
                android:textColor="@color/black"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/begin_sleep_button"
                android:layout_width="140dp"
                android:layout_height="44dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/begin_sleep"
                android:textColor="@color/black"
                app:backgroundTint="@color/cream"
                app:layout_constraintEnd_toStartOf="@+id/reset_sleep_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sensorTitle" />

            <Button
                android:id="@+id/reset_sleep_button"
                android:layout_width="140dp"
                android:layout_height="44dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:enabled="false"
                android:fontFamily="sans-serif-light"
                android:text="@string/reset_sleep"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:backgroundTint="@color/cream"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sensorTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="268dp"
            android:layout_height="118dp"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/graph"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/lumen_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/light_values_here"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.395" />

            <TextView
                android:id="@+id/lumen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/lumen_values"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.098" />

            <Button
                android:id="@+id/pause_sleep_button"
                android:layout_width="114dp"
                android:layout_height="36dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/pause_sleep"
                android:textColor="@color/black"
                app:backgroundTint="@color/cream"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lumen_values"
                app:layout_constraintVertical_bias="0.515" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="402dp"
            android:layout_height="156dp"
            android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>

